skill and education mobile fix 2.0

--- a/CSS/education/education-responsive-styles.css
+++ b/CSS/education/education-responsive-styles.css
@@ -14,6 +14,9 @@
     }
 }
 @media all and (max-width: 1000px) {
+    .education {
+        height: 90vh;
+    }
     .education__container {
         width: 95%;
     }
@@ -27,6 +30,10 @@
     }
 }
 @media all and (max-width: 450px) {
+    .education {
+        height: 100vh;
+    }
+
     .education__cards-container {
         justify-content: space-between;
         gap: 1;
