--- a/CSS/skills/skills-responsive-styles.css
+++ b/CSS/skills/skills-responsive-styles.css
@@ -15,6 +15,9 @@
 }
 
 @media all and (max-width: 1000px) {
+    .skills {
+        height: 90vh;
+    }
     .skills__cards-container {
         flex-direction: column;
         gap: 2rem;
@@ -27,12 +30,19 @@
 }
 
 @media all and (max-width: 768px) {
+
+    .skills {
+        height: 100vh;
+    }
     .skills__container {
         width: 95%;
     }
 }
 
 @media all and (max-width: 450px) {
+    .skills {
+        height: 100vh;
+    }
     .skills__cards-container {
         justify-content: space-between;
         gap: 1rem;
